Implemented basics of Add Pantry Item panel

--- a/src/components/common/Panel/Panel.scss
+++ b/src/components/common/Panel/Panel.scss
@@ -22,7 +22,7 @@
     &-visibleBlock {
       background-color: $light-blocker;
       @include absolute($topbar-height, 0, 0, 0);
-      @include transition(opacity, 0.8s, cubic-bezier);
+      @include transition(opacity);
       visibility: hidden;
       opacity: 0;
       &:focus, &:active {
