Moving project to github.

--- a/src/components/TopBar/TopBar.scss
+++ b/src/components/TopBar/TopBar.scss
@@ -1,7 +1,7 @@
-@import "../../../theme/theme";
+@import "../theme/theme";
 
 .TopBar {
-  border-bottom: 1px solid $neutralLight;
+  border-bottom: 1px solid $color-neutralLight;
   height: $topbar-height;
   box-sizing: border-box;
   > div:first-child {
